after Eilat. I have no idea what I did

--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -27,6 +27,22 @@
   file = {Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/AXE5W4FW/Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:application/pdf;Schäfer_Strimmer_2005_A Shrinkage Approach to Large-Scale Covariance Matrix Estimation and.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/Q9GFBFS7/Schäfer_Strimmer_2005_A Shrinkage Approach to Large-Scale Covariance Matrix Estimation and.pdf:application/pdf;A shrinkage approach to large-scale covariance matrix estimation and implications for... - Abstract - Europe PubMed Central:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/JKX3G4SS/16646851.html:text/html}
 }
 
+@article{fan_liblinear:_2008,
+  title = {{{LIBLINEAR}}: {{A Library}} for {{Large Linear Classification}}},
+  volume = {9},
+  issn = {1532-4435},
+  shorttitle = {{{LIBLINEAR}}},
+  abstract = {LIBLINEAR is an open source library for large-scale linear classification. It supports logistic regression and linear support vector machines. We provide easy-to-use command-line tools and library calls for users and developers. Comprehensive documents are available for both beginners and advanced users. Experiments demonstrate that LIBLINEAR is very efficient on large sparse data sets.},
+  timestamp = {2016-08-19T13:51:12Z},
+  urldate = {2014-03-10},
+  journal = {J. Mach. Learn. Res.},
+  author = {Fan, Rong-En and Chang, Kai-Wei and Hsieh, Cho-Jui and Wang, Xiang-Rui and Lin, Chih-Jen},
+  month = jun,
+  year = {2008},
+  pages = {1871--1874},
+  file = {Fan et al_2008_LIBLINEAR.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/RAU6THKQ/Fan et al_2008_LIBLINEAR.pdf:application/pdf}
+}
+
 @book{vaart_asymptotic_1998,
   address = {Cambridge, UK ; New York, NY, USA},
   title = {Asymptotic {{Statistics}}},
@@ -197,6 +213,29 @@
   file = {Stelzer et al_2013_Statistical inference and multiple testing correction in classification-based.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/C9BKWQSA/Stelzer et al_2013_Statistical inference and multiple testing correction in classification-based.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2NGS4Q2G/S1053811912009810.html:text/html;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BX4T8DK8/S1053811912009810.html:text/html}
 }
 
+@article{molinaro_prediction_2005,
+  title = {Prediction error estimation: a comparison of resampling methods},
+  volume = {21},
+  issn = {1367-4803, 1460-2059},
+  shorttitle = {Prediction error estimation},
+  doi = {10.1093/bioinformatics/bti499},
+  abstract = {Motivation: In genomic studies, thousands of features are collected on relatively few samples. One of the goals of these studies is to build classifiers to predict the outcome of future observations. There are three inherent steps to this process: feature selection, model selection and prediction assessment. With a focus on prediction assessment, we compare several methods for estimating the `true' prediction error of a prediction model in the presence of feature selection.
+Results: For small studies where features are selected from thousands of candidates, the resubstitution and simple split-sample estimates are seriously biased. In these small samples, leave-one-out cross-validation (LOOCV), 10-fold cross-validation (CV) and the .632+ bootstrap have the smallest bias for diagonal discriminant analysis, nearest neighbor and classification trees. LOOCV and 10-fold CV have the smallest bias for linear discriminant analysis. Additionally, LOOCV, 5- and 10-fold CV, and the .632+ bootstrap have the lowest mean square error. The .632+ bootstrap is quite biased in small sample sizes with strong signal-to-noise ratios. Differences in performance among resampling methods are reduced as the number of specimens available increase.
+Contact: annette.molinaro@yale.edu
+Supplementary Information: A complete compilation of results and R code for simulations and analyses are available in Molinaro et al. (2005) (http://linus.nci.nih.gov/brb/TechReport.htm).},
+  language = {en},
+  timestamp = {2016-08-19T13:50:52Z},
+  number = {15},
+  urldate = {2015-12-27},
+  journal = {Bioinformatics},
+  author = {Molinaro, Annette M. and Simon, Richard and Pfeiffer, Ruth M.},
+  month = jan,
+  year = {2005},
+  pages = {3301--3307},
+  file = {Molinaro et al_2005_Prediction error estimation.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/K7KIACIA/Molinaro et al_2005_Prediction error estimation.pdf:application/pdf;Molinaro et al_2005_Prediction error estimation.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/UFQXIRFW/Molinaro et al_2005_Prediction error estimation.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/B3EV448D/3301.html:text/html;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/ZH2Z4QVF/3301.html:text/html},
+  pmid = {15905277}
+}
+
 @article{arlot_survey_2010,
   title = {A survey of cross-validation procedures for model selection},
   volume = {4},
@@ -236,6 +275,25 @@
   file = {Nadler_2008_Finite sample approximation results for principal component analysis.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/K8SXK8TZ/Nadler_2008_Finite sample approximation results for principal component analysis.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/ZV3UZPQ7/1231165185.html:text/html},
   mrnumber = {MR2485013},
   zmnumber = {05503376}
+}
+
+@article{besag_sequential_1991,
+  title = {Sequential {{Monte Carlo}} p-values},
+  volume = {78},
+  issn = {0006-3444, 1464-3510},
+  doi = {10.1093/biomet/78.2.301},
+  abstract = {The assessment of statistical significance by Monte Carlo simulation may be costly in computer time. This paper looks at a number of ways of calculating exact Monte Carlo p-values by sequential sampling. Such p-values are shown to have properties similar to those obtained by sampling with a fixed sample size. Both standard and generalized Monte Carlo procedures are discussed and, in particular, a sequential method is proposed for dealing with situations in which values can only be conveniently generated using a Markov chain, conditioned to pass through the observed data.},
+  language = {en},
+  timestamp = {2016-08-19T13:51:18Z},
+  number = {2},
+  urldate = {2016-01-28},
+  journal = {Biometrika},
+  author = {Besag, Julian and Clifford, Peter},
+  month = jan,
+  year = {1991},
+  keywords = {Markov Chain,Monte Carlo testing,p-value,Sequential estimation,Sequential test,Significance test},
+  pages = {301--304},
+  file = {Besag_Clifford_1991_Sequential Monte Carlo p-values.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GRPAZN2F/Besag_Clifford_1991_Sequential Monte Carlo p-values.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/74PTK7ZA/301.html:text/html;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/T9S4S4RK/301.html:text/html}
 }
 
 @article{srivastava_testing_2013,
@@ -612,7 +670,7 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   issn = {0027-8874, 1460-2105},
   doi = {10.1093/jnci/95.1.14},
   language = {en},
-  timestamp = {2016-07-28T06:02:48Z},
+  timestamp = {2016-08-19T13:50:55Z},
   number = {1},
   urldate = {2016-07-28},
   journal = {Journal of the National Cancer Institute},
@@ -620,7 +678,7 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   month = jan,
   year = {2003},
   pages = {14--18},
-  file = {Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/S2N3HXB2/Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TPKZHDS4/14.html:text/html},
+  file = {Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/NKJU5FII/Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:application/pdf;Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/S2N3HXB2/Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TPKZHDS4/14.html:text/html;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/UA3MHPBV/14.html:text/html},
   pmid = {12509396}
 }
 
@@ -1047,29 +1105,6 @@ Results: A model-based approach is used to compare the ranking performances of r
   file = {Hsing et al_Relation Between Permutation-Test P Values and Classifier Error Estimates.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/NKNDPGEF/Hsing et al_Relation Between Permutation-Test P Values and Classifier Error Estimates.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/QRWTUHZF/A1023985022691.html:text/html}
 }
 
-@article{molinaro_prediction_2005,
-  title = {Prediction error estimation: a comparison of resampling methods},
-  volume = {21},
-  issn = {1367-4803, 1460-2059},
-  shorttitle = {Prediction error estimation},
-  doi = {10.1093/bioinformatics/bti499},
-  abstract = {Motivation: In genomic studies, thousands of features are collected on relatively few samples. One of the goals of these studies is to build classifiers to predict the outcome of future observations. There are three inherent steps to this process: feature selection, model selection and prediction assessment. With a focus on prediction assessment, we compare several methods for estimating the `true' prediction error of a prediction model in the presence of feature selection.
-Results: For small studies where features are selected from thousands of candidates, the resubstitution and simple split-sample estimates are seriously biased. In these small samples, leave-one-out cross-validation (LOOCV), 10-fold cross-validation (CV) and the .632+ bootstrap have the smallest bias for diagonal discriminant analysis, nearest neighbor and classification trees. LOOCV and 10-fold CV have the smallest bias for linear discriminant analysis. Additionally, LOOCV, 5- and 10-fold CV, and the .632+ bootstrap have the lowest mean square error. The .632+ bootstrap is quite biased in small sample sizes with strong signal-to-noise ratios. Differences in performance among resampling methods are reduced as the number of specimens available increase.
-Contact: annette.molinaro@yale.edu
-Supplementary Information: A complete compilation of results and R code for simulations and analyses are available in Molinaro et al. (2005) (http://linus.nci.nih.gov/brb/TechReport.htm).},
-  language = {en},
-  timestamp = {2016-08-10T06:24:22Z},
-  number = {15},
-  urldate = {2016-08-10},
-  journal = {Bioinformatics},
-  author = {Molinaro, Annette M. and Simon, Richard and Pfeiffer, Ruth M.},
-  month = jan,
-  year = {2005},
-  pages = {3301--3307},
-  file = {Molinaro et al_2005_Prediction error estimation.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/K7KIACIA/Molinaro et al_2005_Prediction error estimation.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/B3EV448D/3301.html:text/html},
-  pmid = {15905277}
-}
-
 @article{fay_using_2007,
   title = {On {{Using Truncated Sequential Probability Ratio Test Boundaries}} for {{Monte Carlo Implementation}} of {{Hypothesis Tests}}},
   volume = {16},
@@ -1085,25 +1120,6 @@ Supplementary Information: A complete compilation of results and R code for simu
   year = {2007},
   pages = {946--967},
   file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/CZB7RFFK/106186007X257025.html:text/html}
-}
-
-@article{besag_sequential_1991,
-  title = {Sequential {{Monte Carlo}} p-values},
-  volume = {78},
-  issn = {0006-3444, 1464-3510},
-  doi = {10.1093/biomet/78.2.301},
-  abstract = {The assessment of statistical significance by Monte Carlo simulation may be costly in computer time. This paper looks at a number of ways of calculating exact Monte Carlo p-values by sequential sampling. Such p-values are shown to have properties similar to those obtained by sampling with a fixed sample size. Both standard and generalized Monte Carlo procedures are discussed and, in particular, a sequential method is proposed for dealing with situations in which values can only be conveniently generated using a Markov chain, conditioned to pass through the observed data.},
-  language = {en},
-  timestamp = {2016-08-10T06:31:29Z},
-  number = {2},
-  urldate = {2016-08-10},
-  journal = {Biometrika},
-  author = {Besag, Julian and Clifford, Peter},
-  month = jan,
-  year = {1991},
-  keywords = {Markov Chain,Monte Carlo testing,p-value,Sequential estimation,Sequential test,Significance test},
-  pages = {301--304},
-  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/T9S4S4RK/301.html:text/html}
 }
 
 @article{ernst_permutation_2004,
@@ -1275,16 +1291,6 @@ Contact: tongt@hkbu.edu.hk},
   file = {Breiman_1998_Using convex pseudo-data to increase prediction accuracy.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BBZ3QJDR/Breiman_1998_Using convex pseudo-data to increase prediction accuracy.pdf:application/pdf}
 }
 
-@article{REF08a,
-  title = {{{LIBLINEAR}}: {{A Library}} for {{Large Linear Classification}}},
-  volume = {9},
-  timestamp = {2016-08-16T11:13:14Z},
-  journal = {Journal of Machine Learning Research},
-  author = {Fan, Rong-En and Chang, Kai-Wei and Hsieh, Cho-Jui and Wang, Xiang-Rui and Lin, Chih-Jen},
-  year = {2008},
-  pages = {1871--1874}
-}
-
 @article{szekely_brownian_2009,
   title = {Brownian distance covariance},
   volume = {3},
@@ -1292,7 +1298,7 @@ Contact: tongt@hkbu.edu.hk},
   doi = {10.1214/09-AOAS312},
   abstract = {Distance correlation is a new class of multivariate dependence coefficients applicable to random vectors of arbitrary and not necessarily equal dimension. Distance covariance and distance correlation are analogous to product-moment covariance and correlation, but generalize and extend these classical bivariate measures of dependence. Distance correlation characterizes independence: it is zero if and only if the random vectors are independent. The notion of covariance with respect to a stochastic process is introduced, and it is shown that population distance covariance coincides with the covariance with respect to Brownian motion; thus, both can be called Brownian distance covariance. In the bivariate case, Brownian covariance is the natural extension of product-moment covariance, as we obtain Pearson product-moment covariance by replacing the Brownian motion in the definition with identity. The corresponding statistic has an elegantly simple computing formula. Advantages of applying Brownian covariance and correlation vs the classical Pearson covariance and correlation are discussed and illustrated.},
   language = {EN},
-  timestamp = {2016-08-19T05:05:57Z},
+  timestamp = {2016-08-19T13:50:21Z},
   number = {4},
   urldate = {2016-08-19},
   journal = {The Annals of Applied Statistics},
@@ -1303,6 +1309,89 @@ Contact: tongt@hkbu.edu.hk},
   pages = {1236--1265},
   file = {Székely_Rizzo_2009_Brownian distance covariance.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/ERR2RH2U/Székely_Rizzo_2009_Brownian distance covariance.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/PA6EQT2U/1267453933.html:text/html},
   mrnumber = {MR2752127}
+}
+
+@article{gretton_discussion_2009,
+  title = {Discussion of: {{Brownian}} distance covariance},
+  volume = {3},
+  issn = {1932-6157, 1941-7330},
+  shorttitle = {Discussion of},
+  doi = {10.1214/09-AOAS312E},
+  abstract = {Project Euclid - mathematics and statistics online},
+  language = {EN},
+  timestamp = {2016-08-19T13:50:39Z},
+  number = {4},
+  urldate = {2016-08-19},
+  journal = {The Annals of Applied Statistics},
+  author = {Gretton, Arthur and Fukumizu, Kenji and Sriperumbudur, Bharath K.},
+  month = dec,
+  year = {2009},
+  keywords = {Brownian distance covariance,covariance operator,Independence testing,kernel methods,reproducing kernel Hilbert space},
+  pages = {1285--1294},
+  file = {Gretton et al_2009_Discussion of.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/XICFVH8J/Gretton et al_2009_Discussion of.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/5Z4E2JAM/1267453938.html:text/html},
+  mrnumber = {MR2752132},
+  zmnumber = {05696876}
+}
+
+@inproceedings{smola_hilbert_2007-1,
+  title = {A {{Hilbert}} space embedding for distributions},
+  timestamp = {2016-08-19T13:51:02Z},
+  urldate = {2016-08-19},
+  booktitle = {International {{Conference}} on {{Algorithmic Learning Theory}}},
+  publisher = {{Springer}},
+  author = {Smola, Alex and Gretton, Arthur and Song, Le and Sch{\"o}lkopf, Bernhard},
+  year = {2007},
+  pages = {13--31},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/JE62NE4D/978-3-540-75225-7_5.html:text/html}
+}
+
+@article{dauxois_nonlinear_1998,
+  title = {Nonlinear canonical analysis and independence tests},
+  volume = {26},
+  issn = {0090-5364, 2168-8966},
+  doi = {10.1214/aos/1024691242},
+  abstract = {.Measures of association between two random variables (r.v.) that are symmetric nondecreasing functions of the canonical coefficients provided by the nonlinear canonical analysis of the r.v.'s are studied. These measures can be used to characterize independence. Their estimators are obtained by estimating a suitable approximation to nonlinear canonical analysis. When some conditions are satisfied, asymptotic distributions of the estimators, both under the independence hypothesis and under dependence, are given. A class of tests of independence with asymptotic level of significance can be investigated.},
+  timestamp = {2016-08-19T13:48:07Z},
+  number = {4},
+  urldate = {2016-08-19},
+  journal = {The Annals of Statistics},
+  author = {Dauxois, Jacques and Nkiet, Guy Martial},
+  month = aug,
+  year = {1998},
+  keywords = {approximating and estimating nonlinear canonical
+			 analysis,independence tests,Measure of association,nonlinear canonical analysis,symmetric nondecreasing functions},
+  pages = {1254--1278},
+  file = {Dauxois_Nkiet_1998_Nonlinear canonical analysis and independence tests.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/42GK3GTG/Dauxois_Nkiet_1998_Nonlinear canonical analysis and independence tests.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/SGXBMZNN/1024691242.html:text/html},
+  mrnumber = {MR1647653},
+  zmnumber = {0934.62061}
+}
+
+@article{bach_kernel_2002,
+  title = {Kernel {{Independent Component Analysis}}},
+  volume = {3},
+  issn = {ISSN 1533-7928},
+  timestamp = {2016-08-19T13:48:53Z},
+  number = {Jul},
+  urldate = {2016-08-19},
+  journal = {Journal of Machine Learning Research},
+  author = {Bach, Francis R. and Jordan, Michael I.},
+  year = {2002},
+  pages = {1--48},
+  file = {Bach_Jordan_2002_Kernel Independent Component Analysis.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/F2N6XPBJ/Bach_Jordan_2002_Kernel Independent Component Analysis.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/56MTGJNS/bach02a.html:text/html}
+}
+
+@article{fukumizu_statistical_2007,
+  title = {Statistical {{Consistency}} of {{Kernel Canonical Correlation Analysis}}},
+  volume = {8},
+  issn = {ISSN 1533-7928},
+  timestamp = {2016-08-19T13:49:31Z},
+  number = {Feb},
+  urldate = {2016-08-19},
+  journal = {Journal of Machine Learning Research},
+  author = {Fukumizu, Kenji and Bach, Francis R. and Gretton, Arthur},
+  year = {2007},
+  pages = {361--383},
+  file = {Fukumizu et al_2007_Statistical Consistency of Kernel Canonical Correlation Analysis.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TZER5RX9/Fukumizu et al_2007_Statistical Consistency of Kernel Canonical Correlation Analysis.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/NVE7XNFC/fukumizu07a.html:text/html}
 }
 
 
