preparing to commit

--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -83,7 +83,8 @@
 \linenumbers
 
 \begin{abstract}
-[TODO]
+We show that using a classifier's accuracy as a test statistic, is underpowered for the purpose of finding a difference between populations, compared to a bona-fide statistical test. 
+For the cases that the goal of the test is not the existence of a difference between populations, but the actual classification ability, we suggest several improvements to the classification accuracy, to increase its power against a ``pure chance'' null. 
 \end{abstract}
 
 
