--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -83,7 +83,8 @@
 \linenumbers
 
 \begin{abstract}
-We show that using a classifier's accuracy as a test statistic, is underpowered for the purpose of finding a difference between populations, compared to a bona-fide statistical test. 
+We show that using a classifier's accuracy as a test statistic, is underpowered for the purpose of finding a difference between populations, compared to a bona-fide statistical test.
+It is also more complicated to implement, so that a statistical test should be preferred. 
 For the cases that the goal of the test is not the existence of a difference between populations, but the actual classification ability, we suggest several improvements to the classification accuracy, to increase its power against a ``pure chance'' null. 
 \end{abstract}
 
@@ -112,7 +113,8 @@ As put in \cite{pereira_machine_2009}:
 \end{quote}
 A practitioner may thus approach the signal detection problem with a two-group population test such as Hotelling's $T^2$ \citep{anderson_introduction_2003}.
 Alternatively, if the size of brain region of interest is large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{schafer_shrinkage_2005} or \cite{srivastava_multivariate_2007}.
-For brevity, and in contrast to \emph{accuracy tests}, we will call any two-sample multivariate tests simply \emph{population tests}, a.k.a.\ \emph{class comparisons}. [TODO: rename population test to parameter test?]
+For brevity, and in contrast to \emph{accuracy tests}, we will call any two-sample multivariate tests simply \emph{population tests}, a.k.a.\ \emph{class comparisons}. 
+%TODO: rename population test to parameter test?
 
 
 At this point, it becomes unclear which is preferable: a population test or an accuracy test?
@@ -145,7 +147,7 @@ As simply put by Frank Harrell in \textsf{CrossValidated\footnote{A Q\&A website
 
 
 The degree of discretization is governed by the number of samples. 
-In our neuroscience example from \citet{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
+In our example from \citet{gilron_quantifying_2016}, the classification is computed using $40$ examples, so that the test statistic may assume only $40$ possible values. 
 This number of examples is not unusual if considering this is the number of trial-repeats, or the number of subjects, in an neuroimaging study. 
 
 The discretization effect is aggravated if the test statistic is highly concentrated. 
@@ -313,7 +315,7 @@ Another example is \textit{lda.noCV.1}, which is Fisher's LDA, returning the res
 \label{sec:type_i}
 
 Our simulations show that all of the tests considered conserve the desired $0.05$ false positive rate, up to varying levels of conservatism.
-This can be seen from the fact that the probability of rejection is no larger than $0.05$ in the absence of any effect, encoded by a red circle. 
+This can be seen from the fact that the probability of rejection is no higher than $0.05$ in the absence of any effect, encoded by a red circle. 
 This is true, in particular if: \newline
 (a) The folds are balanced or not (Figures~\ref{fig:simulation_1},\ref{fig:n_folds} and \ref{fig:n_folds_unbalanced}). \newline
 (b) The tuning parameters are varied (cost=$10$ versus cost=$0.1$). \newline
@@ -347,7 +349,7 @@ From the simulation results reported in Appendix~\ref{apx:simulations} we collec
 \item Regularization is critical to power as can be seen by comparing \emph{Hotelling} to \emph{Hotelling.shrink} and \emph{sd}.
 
 \item The z-scoring of the accuracies was introduced to deal with unbalanced foldings. 
-If the z-scoring has any effect at all, it merely kills power.
+If the z-scoring has any effect at all, it merely diminishes power.
 The non-z-scored accuracy tests are unaffected by the balance of the folding.
 
 \item Both accuracy and population tests are inappropriate for scale alternatives (Figure~\ref{fig:scale_change}). 
@@ -379,7 +381,6 @@ The study was rather large and consisted of about $200$ subjects.
 The data was kindly made available by the authors at the OpenfMRI website\footnote{\url{https://openfmri.org/}}.
 
 We perform group inference using within-subject permutations along the analysis pipeline of \cite{stelzer_statistical_2013}, which was also reported in \cite{gilron_quantifying_2016}. 
-For completeness, the pipeline is described in Appendix~\ref{apx:analysis}. 
 To demonstrate our point, we compare the \emph{sd} population test with the \emph{svm.cv.1} accuracy test. 
 
 In agreement with our simulation results, the population test (\emph{sd}) discovers more brain regions of interest when compared to an accuracy test (\emph{svm.cv.1}).
@@ -397,7 +398,7 @@ Map reports the centers of $27$-voxel sized spherical regions, as discovered by 
 Region-wise significance was determined using the permutation scheme of \cite{stelzer_statistical_2013}, followed by region-wise $FDR \leq 0.05$ control using the Benjamini-Hochberg procedure \citep{benjamini_controlling_1995}.
 Number of permutations equals $400$.
 The population test detect $1,232$ regions, and the accuracy test $441$, $399$ of which are common to both.
-For the details of the analysis see Appendix~\ref{apx:analysis} and \cite{gilron_quantifying_2016}.  
+For the details of the analysis see \cite{gilron_quantifying_2016}.  
   }
 \label{fig:read_data}
 \end{figure}
@@ -415,7 +416,7 @@ For the details of the analysis see Appendix~\ref{apx:analysis} and \cite{gilron
 
 We have set out to understand which of the tests is more powerful: accuracy tests or population tests. 
 No amount of simulations can replace the insight provided by a closed-form analytic result. 
-The finite sample power of permutation tests is a formidable mathematical problem, so we currently content ourselves with simulations 
+The finite sample power of permutation tests is a formidable mathematical problem, so we currently content ourselves with simulations.
 We have concluded that the population tests are typically preferable. 
 Their high dimensional versions, such as \cite{srivastava_multivariate_2007} and \cite{schafer_shrinkage_2005},  are particularly well suited for neuroimaging problems such as MVPA.
 We attribute this to several effects: \newline
@@ -458,7 +459,7 @@ Consider brain decoding for machine interfaces, or clinical diagnosis, where the
 In those examples, the purpose of the test is not to detect a difference between classes, but to actually test the performance of a particular classifier.  
 
 Secondly, it may be argued that accuracy tests permits the separation between classes in high dimensions, such as in \emph{reproducing kernel Hilbert spaces} (RKHS) by using non-linear predictors while population tests do not. 
-This is a false argument-- accuracy test do not have any more flexibility that population tests. 
+This is a false argument-- accuracy tests do not have any more flexibility than population tests. 
 Indeed, it is possible to test for location in the same space the classifier is learned. 
 For independence tests in high dimensional spaces see for example \cite{szekely_brownian_2009} or \citet{gretton_kernel_2012-1}.
 On the other hand, based on our experience, and the reported neuroimaging example, we find that a population test in the original feature space is a simple and powerful approach to signal detection.
@@ -474,7 +475,7 @@ On the other hand, based on our experience, and the reported neuroimaging exampl
 
 \subsection{Smoothing accuracy estimates}
 \label{sec:bootstrap}
-It may be possible to alleviate the effect of discretization by via the cross-validation scheme.
+It may be possible to alleviate the effect of discretization via the cross-validation scheme.
 The discreteness of the accuracy statistic is governed by the number of examples in the union of holdout test sets, over all retesting iterations.
 For V-fold CV, for instance, the accuracy may assume as many values as the sample size. 
 This suggests that the accuracy can be ``smoothed'' by allowing the test sample to be drawn with replacement. 
@@ -489,7 +490,7 @@ The leave-one-out bootstrap estimate, $\accEstim_{\algo}^{bLOO}$,  is defined as
 		\accEstim_{\algo}^{bLOO}:= \frac 1n \sum_{i=1}^{n} \frac{1}{|C^{(i)}|} \sum_{b \in C^{(i)}} \indicator{\hypFun{\data^b}{\features_i}=\outcomes_i}.
 \end{align}
 where $|A|$ is the cardinality of set $A$.
-Equivalently [TODO: verify], denoting by $S^{(b)}$ the indexes of observations, $i$, that are \emph{not} in the bootstrap sample $b$ and are not empty, 
+Equivalently, denoting by $S^{(b)}$ the indexes of observations, $i$, that are \emph{not} in the bootstrap sample $b$ and are not empty, 
 \begin{align}
 	\accEstim_{\algo}^{bLOO} = \frac 1B \sum_{b=1}^{B} \frac{1}{|S^{(b)}|} \sum_{i \in S^{(b)}} \indicator{\hypFun{\data^b}{\features_i}=\outcomes_i}.
 \end{align}
@@ -497,13 +498,13 @@ Equivalently [TODO: verify], denoting by $S^{(b)}$ the indexes of observations, 
 
 \begin{definition}[b$0.632$]
 \label{def:b0632}
-The \emph{0.632 bootstrap} accuracy estimate, b$0.632$, is a wighted average of the resubstitution error and the bLOO.
+The \emph{0.632 bootstrap} accuracy estimate, b$0.632$, is a weighted average of the resubstitution error and the bLOO.
 Formally:
 \begin{align}
 	\accEstim_{\algo}^{0.632} := 0.368 \; \accEstim_{\algo}^{Resub}  + 0.632 \; \accEstim_{\algo}^{bLOO}.
 \end{align}
 \end{definition}
-Simulation results reported in Figure~\ref{fig:bootstrap} with naming conventions in Table~\ref{tab:collected_2}.
+Simulation results are reported in Figure~\ref{fig:bootstrap} with naming conventions in Table~\ref{tab:collected_2}.
 It can be seen that selecting test sets with replacement does increase the power, when compared to V-fold cross validation, but still falls short from the power of population tests. 
 It can also be seen that power increases with the number of bootstrap replications, as was to be expected, since more replications reduce the level of discretization.
 The type of bootstrap, bLOO versus b$0.632$, does not change the power. 
@@ -540,7 +541,7 @@ $B$ denotes the number of Bootstrap samples. }
 		  \textbf{Bootstrap--}
 		  The power of a permutation test with various test statistics. 
 		  The power on the $x$ axis. 
-		  Effect are color and shape coded. 
+		  Effects are color and shape coded. 
 		  The various statistics on the $y$ axis. 
 		  Their details are given in tables~\ref{tab:collected} and \ref{tab:collected_2}. 
 		  Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
@@ -559,7 +560,7 @@ In the spirit of the regularized covariance of \emph{Hotelling.shrink}, we try a
 In the spirit of the diagonalized covariance of \emph{sd}, we try a diagonalized LDA \citep{dudoit_comparison_2002}, a.k.a.\ \emph{Gaussian naive Bayes}. 
 
 
-Simulation results reported in Figure~\ref{fig:highdim} with naming conventions in Table~\ref{tab:collected_3}.
+Simulation results are reported in Figure~\ref{fig:highdim} with naming conventions in Table~\ref{tab:collected_3}.
 It can be seen that regularizing a classifier in high dimension, just like a parameter test, improves power. 
 It can also be seen that (regularized) parameter tests are still more powerful than (regularized) accuracy tests. 
 This was to be expected, since we already saw in (e.g.) Figure~\ref{fig:simulation_11} that the unregularized parameter test, \emph{Hotelling}, is slightly more powerful than unregularized accuracy tests such as (e.g.) \emph{svm.CV.1}.
@@ -607,7 +608,7 @@ The same as Table~\ref{tab:collected} for regularized (high dimensional) predict
 \textbf{HighDim Classifier--} 
 		The power of a permutation test with various test statistics. 
 		The power on the $x$ axis. 
-		Effect are color and shape coded. 
+		Effects are color and shape coded. 
 		The various statistics on the $y$ axis. 
 		Their details are given in tables~\ref{tab:collected} and \ref{tab:collected_3}. 
 		Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
@@ -644,7 +645,7 @@ In low dimensional problems, the discretization is less impactful, and the compu
 There is a fundamental difference between V-folding and resubstitution. The latter should not be thought of as the limit of the former. 
  
 
-\paragraph{Don't z-score.} There is no gain in z-scoring the accuracy scores. Our motivating rational was clearly flawed. [TODO: why?]
+\paragraph{Don't z-score.} There is no gain in z-scoring the accuracy scores. Our motivating rational was clearly flawed. %TODO: why?
 
 
 
@@ -750,47 +751,47 @@ and related ``data science'' communities.
 
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Analysis pipeline}
-\label{apx:analysis}
-
-Here is the analysis pipeline of \cite{stelzer_statistical_2013} we for the auditory data in \cite{gilron_quantifying_2016}.
-Denoting by 
-$i=1,\dots,I$ the subject index, 
-$v=1,\dots,V$ the voxel index, and 
-$s = 1,\dots,S$ the permutation index. 
-Since regions\footnote{\emph{searchlight} or \emph{sphere} in the MVPA parlance} are centered around a unique voxel, the voxel index $v$ also serves as a unique region index.
-Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is compared to its permutation null distribution computed by Algorithm~\ref{algo:permutation}.
-
-
-\begin{algorithm}[H]
-\caption{Compute a group parametric map.}
-\label{algo:statistic}
-
- \KwData{fMRI scans, and experimental design.}
- \KwResult{Brain map of group statistics: $\{\bar{T}_v\}_{v=1}^V$}
-	 \For{$v \in 1,\dots,V$}{
-		 \For{$i \in 1,\dots,I$}{
-			 $T_{i,v} \leftarrow$ test statistic for subject $i$ in a region centered at $v$.
-			 } 	  
-	  	 $\bar{T}_{v} \leftarrow \frac{1}{I}\sum_{i=1}^I T_{i,v}$. 
- 	 }
-\end{algorithm}
-
-
-\begin{algorithm}[H]
-\caption{Compute a permutation p-value map.} 
-\label{algo:permutation}
-
- \KwData{fMRI scans of $20$ subjects, experimental design.}
- \KwResult{Brain map of permutation p-values: $\{p_v\}_{v=1}^V$}
-  \For{$s \in 1,\dots\,S$}{
-    	    permute labels\;
-    	    $\bar{T}_{v}^s \leftarrow$ parametric map 
-  
-  	}
-\end{algorithm}
-
-
+%\section{Analysis pipeline}
+%\label{apx:analysis}
+%
+%Here is the analysis pipeline of \cite{stelzer_statistical_2013} we for the auditory data in \cite{gilron_quantifying_2016}.
+%Denoting by 
+%$i=1,\dots,I$ the subject index, 
+%$v=1,\dots,V$ the voxel index, and 
+%$s = 1,\dots,S$ the permutation index. 
+%Since regions\footnote{\emph{searchlight} or \emph{sphere} in the MVPA parlance} are centered around a unique voxel, the voxel index $v$ also serves as a unique region index.
+%Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is compared to its permutation null distribution computed by Algorithm~\ref{algo:permutation}.
+%
+%
+%\begin{algorithm}[H]
+%\caption{Compute a group parametric map.}
+%\label{algo:statistic}
+%
+% \KwData{fMRI scans, and experimental design.}
+% \KwResult{Brain map of group statistics: $\{\bar{T}_v\}_{v=1}^V$}
+%	 \For{$v \in 1,\dots,V$}{
+%		 \For{$i \in 1,\dots,I$}{
+%			 $T_{i,v} \leftarrow$ test statistic for subject $i$ in a region centered at $v$.
+%			 } 	  
+%	  	 $\bar{T}_{v} \leftarrow \frac{1}{I}\sum_{i=1}^I T_{i,v}$. 
+% 	 }
+%\end{algorithm}
+%
+%
+%\begin{algorithm}[H]
+%\caption{Compute a permutation p-value map.} 
+%\label{algo:permutation}
+%
+% \KwData{fMRI scans of $20$ subjects, experimental design.}
+% \KwResult{Brain map of permutation p-values: $\{p_v\}_{v=1}^V$}
+%  \For{$s \in 1,\dots\,S$}{
+%    	    permute labels\;
+%    	    $\bar{T}_{v}^s \leftarrow$ parametric map 
+%  
+%  	}
+%\end{algorithm}
+%
+%
 
 
 
@@ -837,7 +838,7 @@ The reported power is the proportion of replication where the permutation p-valu
 	\caption{
 		The power of a permutation test with various test statistics. 
 		The power on the $x$ axis. 
-		Effect are color and shape coded. 
+		Effects are color and shape coded. 
 		The various statistics on the $y$ axis. 
 		Their details are given in Table~\ref{tab:collected}. 
 		Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
@@ -909,7 +910,7 @@ The reported power is the proportion of replication where the permutation p-valu
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-30 10:33:05"}
-	  \caption{\textbf{Scale Change--} $\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effect are a scale change.}  
+	  \caption{\textbf{Scale Change--} $\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effects are a scale change.}  
 	\label{fig:scale_change}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
